# Chat-application

./: .clang-complete  .clang-format  .clang-tidy  .clang-uml  .fdignore  .gitignore  CMakeLists.txt  README.md  run.sh
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  chat.cpp  chat.hpp  utility.hpp
src/cert/: cert.pem  dh.pem  key.pem
src/client/: CMakeLists.txt  Main.qml  index.html  main.cpp  main.js
src/client/assets/avatars/: images.qrc
src/client/assets/icons/: 7124142_chat_icon.icns
src/client/contact/: ContactPage.qml  sqlcontactmodel.cpp  sqlcontactmodel.hpp
src/client/conversation/: ChatToolBar.qml  ConversationPage.qml  sqlconversationmodel.cpp  sqlconversationmodel.hpp
src/client/messaging/: MessageBoard.cpp  MessageBoard.hpp  MessageBoardAttachedType.cpp  MessageBoardAttachedType.hpp  actor.cpp  actor.hpp  chatmessage.cpp  chatmessage.hpp  messagebody.cpp  messagebody.hpp
src/client/theme/: qtquickcontrols2.conf
src/client/theme/+Material/: ChatToolBar.qml
src/client/theme/+Universal/: ChatToolBar.qml
src/client/theme/+macOS/: ChatToolBar.qml
src/client/utilities/: connectDatabase.hpp
src/server/: CMakeLists.txt  certificate.cpp  certificate.hpp  client.cpp  client.hpp  compression.hpp  http_server.hpp  main.cpp  participant.hpp  room.cpp  room.hpp  server.cpp  server.hpp  server_base.hpp  session.cpp  session.hpp  try.hpp  utility.hpp  watchdog.hpp  websocket_session.cpp  websocket_session.hpp
src/server/utilities/: alias.hpp  concepts.hpp  formatter.hpp  http.hpp  nothrow_awaitable_t.hpp
